@@ -1,3 +1,5 @@
+2006/8/11 -- released version 20060811_trunk
+
 2006/8/10 -- released version 20060810_trunk
 
 2006/8/9 -- released version 20060809_trunk
